<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/decibelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/decibels"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        android:typeface="monospace"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/audioRecordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noiseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/noise"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="@color/white"
        android:typeface="monospace"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decibelTextView" />

    <ImageButton
        android:id="@+id/audioRecordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        android:contentDescription="@string/button_for_recording_audio_from_the_microphone"
        android:src="@drawable/record_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>