<?xml version="1.0" encoding="utf-8"?>
<com.github.sdp.ratemyepfl.ui.layout.CustomScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.sdp.ratemyepfl.ui.activity.EditEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/editEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pt_sans_bold"
            android:paddingTop="20dp"
            android:paddingBottom="15dp"
            android:text="@string/edit_event_title"
            android:textAlignment="center"
            android:textColor="@color/secondaryColor"
            android:textSize="40sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/edit_event_name"
            android:paddingTop="16dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/limitText"
                style="@style/IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/limit_participation"
                android:textSize="11sp" />

            <NumberPicker
                android:id="@+id/limitPicker"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/limitText"
                android:clickable="true" />
        </RelativeLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dividerColor="@color/secondaryColor" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/datePickerText"
                style="@style/IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/event_date"
                android:textSize="11sp" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/datePickerText"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />
        </RelativeLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dividerColor="@color/secondaryColor" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/timePickerText"
                style="@style/IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/event_time"
                android:textSize="11sp" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/timePickerText"
                android:timePickerMode="spinner" />
        </RelativeLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dividerColor="@color/secondaryColor" />

        <TextView
            android:id="@+id/locationText"
            style="@style/IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/event_location"
            android:textSize="11sp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mapContainer"
            android:name="com.github.sdp.ratemyepfl.ui.fragment.main.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:paddingBottom="25dp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dividerColor="@color/secondaryColor" />

        <RelativeLayout
            android:id="@+id/editEventButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/cancelButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/cancel_button_text" />

            <Button
                android:id="@+id/doneButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/done_button_text" />
        </RelativeLayout>
    </LinearLayout>
</com.github.sdp.ratemyepfl.ui.layout.CustomScrollView>